# procmt_2021

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.html  README.md  clang_build_debug.bat  clang_build_debug.sh  clang_build_debug_bfr.sh  clang_build_release.bat  clang_build_release.sh  clang_build_release_bfr.sh  cpp_build_debug.zsh  cpp_build_release.zsh  deploy_clang_build_release.bat  deploy_clang_build_release.py  linux_mac_build_release_prj_bfr.sh  mac_build_release_prj_bfr.sh  mac_clang_build_release_bfr.sh  mingw_build_release.sh  old_win_build_release_prj_bfr.bat  wcl_build_release.bat  win_build_release_prj_bfr.bat  win_cc_build_release_bfr.bat  zmac_deploy_release.zsh  zwcl_build_release.bat  zwcl_deploy_release.bat
.github/: copilot-instructions.md
CoilFieldTestTool/: CMakeLists.txt  CoilFieldTestTool.desktop  GlobalIncludes.cpp  GlobalIncludes.h  Makefile  app_icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.cpp  plot.h  plot.ui  resources.qrc  ui_mainwindow.h  ui_plot.h
CoilFieldTestTool/icons/: CoilFieldTestTool.icns
InSituCoilCal/: CMakeLists.txt  GlobalIncludes.h  Pics.qrc  atsfile.cpp  atsfile.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  measdocxml.cpp  measdocxml.h  myapp.rc  plot.cpp  plot.h  plot.ui  utils.cpp  utils.h
adulib/adu_demonstrator/: CMakeLists.txt  adu_demonstrator.pro  adu_gui.cpp  adu_gui.h  adu_gui.ui  main.cpp
adulib/adu_json/: CMakeLists.txt  adu_json.cpp  adu_json.h  adu_system_defs.h
adulib/aduxml/: CMakeLists.txt  HwDatabase.xml  adbboard.cpp  adbboard.h  adugui.cpp  adugui.h  adugui_main.ui  adujoblist.cpp  adujoblist.h  adulib.cpp  adulib.h  adunetwork.cpp  adunetwork.h  adurt.cpp  adurt.h  aduslot.cpp  aduslot.h  adutable.cpp  adutable.h  aduxml.pro  cable.cpp  cable.h  channel.cpp  channel.h  gps.cpp  gps.h  japanese_site_comments.txt  job.xml  job_submitted_to_adu.xml  main.cpp  sensor.cpp  sensor.h  stoptime_dialog.cpp  stoptime_dialog.h  stoptime_dialog.ui  testjobsaduclientjob.xml  txm.cpp  txm.h
adulib/num_keypad/: CMakeLists.txt  buttons.qrc  num_keypad.cpp  num_keypad.h  num_keypad.pro  num_keypad.ui  num_keypad_resources.qrc
adulib/recording/: CMakeLists.txt  recording.cpp  recording.h  recording.pro
adulib/select_items_from_db_sensors/: CMakeLists.txt  select_items_from_db_sensors.cpp  select_items_from_db_sensors.h  select_items_from_db_sensors.pro  select_items_from_db_sensors.ui
base/msg_logger/: CMakeLists.txt  msg_logger.cpp  msg_logger.h  msg_logger_global.h
boost_student/: CMakeLists.txt  boost_student.cpp  boost_student.h  boost_student_global.h
cmake/: generate_macos_app_icon.cmake  lib.cmake  macos_app_icon.cmake  out_of_tree_build.cmake  qcustomplot_use.cmake  qt_gui_1.cmake  qt_gui_2.cmake  rpath.cmake
fftreal/: Array.h  Array.hpp  DynArray.h  DynArray.hpp  FFTReal.h  FFTReal.hpp  FFTRealFixLen.h  FFTRealFixLen.hpp  FFTRealFixLenParam.h  FFTRealPassDirect.h  FFTRealPassDirect.hpp  FFTRealPassInverse.h  FFTRealPassInverse.hpp  FFTRealSelect.h  FFTRealSelect.hpp  FFTRealUseTrigo.h  FFTRealUseTrigo.hpp  OscSinCos.h  OscSinCos.hpp  def.h  readme.txt
firfilter/: CMakeLists.txt  firfilter.cpp  firfilter.h  firfilter_global.h
include/: CMakeLists.txt  buckets.h  deploy.bat  doubles.h  info.sql3  iterator_complex_templates.h  iterator_templates.h  master_calibration.sql3  procmt.sql3  procmt_alldefines.h  qtx_templates.h  statmaps.h  threadbuffer.h  vector_templates.h  vector_utils.h
include/5chanEHnoise/: ChannelConfig.xml  HwConfig.xml  HwDatabase.xml  HwStatus.xml  Selftest.xml
libgeo/geocoordinates/: CMakeLists.txt  geocoordinates.cpp  geocoordinates.h  geocoordinates_global.h
libgeo/gmttools/: CMakeLists.txt  main.cpp  mtx_tmath.h  std_colour_scale.cpp  std_colour_scale.h
libqt/cal2sql/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  select_coil.cpp  select_coil.h  select_coil.ui
libqt/cal_stat_display_lib/: CMakeLists.txt  cal_stat_display_lib.cpp  cal_stat_display_lib.h  cal_stat_display_lib.ui  cal_stat_display_lib_global.h
libqt/eqdatetime/: CMakeLists.txt  eqdatetime.cpp  eqdatetime.h  eqdatetime_global.h
libqt/gen_trf_filename/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
libqt/gui_items/: CMakeLists.txt  gui_items.cpp  gui_items.h  gui_items_global.h
libqt/lineedit_file/: CMakeLists.txt  lineedit_file.cpp  lineedit_file.h  lineedit_file_global.h
libqt/mest_plotlib/: CMakeLists.txt  mestplotlib.cpp  mestplotlib.h  mestplotlib.ui  mestplotlib_global.h
libqt/plotlib/: CMakeLists.txt  plotlib.cpp  plotlib.h  plotlib_global.h
libqt/prc_com_table/: CMakeLists.txt  prc_com_table.cpp  prc_com_table.h  prc_com_table_global.h
libqt/qstring_utilities/: CMakeLists.txt  qstring_utilities.cpp  qstring_utilities.h  qstring_utilities_global.h
libqt/static_plot/: CMakeLists.txt  static_plot.cpp  static_plot.h  static_plot.ui  static_plot_global.h
libqt/xmlcal/: CMakeLists.txt  app_icon.rc  calexample.xml  main.cpp  resources.qrc  xmlcal.desktop
libqt/xmlcal/icons/: xmlcal.icns
qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h  qcustomplot_global.h
split/: CMakeLists.txt  app_icon.rc  main.cpp  mainwindow.cpp  (+3 more)
tsmp/: CMakeLists.txt  README.md  adu06cal.cpp  adu06cal.h  adu07cal.cpp  adu07cal.h  allinclude.h  atmfile.cpp  atmfile.h  ats_consts.h  atsfilename.cpp  atsfilename.h  atsheader72.cpp  atsheader72.h  atsheader72_tmp.hx  atsheader75.cpp  atsheader75.h  atsheader80.cpp  atsheader80.h  bfr_iter.h  bt_utils.h  c_slice_iter.h  clang_build_release.sh  coherency.cpp  coherency.h  date_utils.cpp  date_utils.h  eDateTime.cpp  eDateTime.h  efp05cal.cpp  efp05cal.h  emi_bfcal.cpp  emi_bfcal.h  emimt24header.cpp  emimt24header.h  emisyscal.cpp  emisyscal.h  fgs01cal.cpp  fgs01cal.h  fgs02cal.cpp  (+35 more)
tsmp/fftReal/: def.h  fftReal.pro  main.cpp
unsplit/: CMakeLists.txt  app_icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  unsplit.desktop
unsplit/icons/: unsplit.icns
xz2gmt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+541 files in other folders)
